2014-06-03  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-e20.el (coding-system-to-mime-charset): Check
	coding-system-to-mime-charset-exclude-regexp is non-nil.

2014-06-01  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-e20.el (coding-system-to-mime-charset-exclude-regexp): New
	variable.
	(coding-system-to-mime-charset): Exclude non-standard charset from
	result.
	Cf. https://github.com/wanderlust/wanderlust/issues/61

2014-05-27  Juliusz Chroboczek  <jch@pps.univ-paris-diderot.fr>

	* mcs-e20.el (charsets-mime-charset-alist): Prefer iso-8859-15 to
	iso-8859-6 and so on.
	Cf. https://github.com/wanderlust/wanderlust/issues/56

	* mcs-xm.el (charsets-mime-charset-alist): Likewise.

2014-03-15  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* install.el (install-prefix): Minor refactoring.

2014-03-13  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* install.el (install-prefix): Handle new installing method on
	MS-Windows.

2014-02-22  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* pces-20.el (insert-file-contents-as-raw-text)
	(insert-file-contents-as-raw-text-CRLF): Fix docstring.
	`insert-file-contents-as-binary' is alias for
	`insert-file-contents-literally' on Emacs 20 and XEmacs with
	coding-system..

2014-02-22  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Fix typo in docstring.
	* pces-20.el (insert-file-contents-as-raw-text)
	(insert-file-contents-as-raw-text-CRLF)

	* pces-e20_2.el (insert-file-contents-as-binary)
	(insert-file-contents-as-raw-text)
	(insert-file-contents-as-raw-text-CRLF)

	* pces-om.el (insert-file-contents-as-binary)

	* pces-raw.el (insert-file-contents-as-binary)

2014-01-11  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* pym.el (static-if, static-when, static-unless)
	(static-condition-case, static-defconst, static-cond): Fix edebug
	specs.  Suggested by Katsumi Yamaoka.
	Cf. http://thread.gmane.org/gmane.mail.wanderlust.general.japanese/9479

2013-08-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* poe.el: Fix the case that `make-temp-file' is byte compiled with
	lexical-binding.