@@ -148,12 +148,9 @@ Return nil if corresponding MIME-charset is not found."
 	 cs)
      (while rest
        (setq cs (car rest))
-       (unless (rassq cs mime-charset-coding-system-alist)
-	 (if (setq cs (coding-system-get cs 'mime-charset))
-	     (or (rassq cs mime-charset-coding-system-alist)
-		 (memq cs dest)  
-		 (setq dest (cons cs dest))
-		 )))
+       (when (and (setq cs (coding-system-get cs 'mime-charset))
+		  (null (memq cs dest)))
+	 (setq dest (cons cs dest)))
        (setq rest (cdr rest)))
      dest))
    (t
@@ -171,10 +168,9 @@ Return nil if corresponding MIME-charset is not found."
 			      (string-match "(MIME:[ \t]*\\([^,)]+\\)" cs)
 			      (match-string 1 cs))))
 	    (setq cs (intern (downcase cs)))
-	    (or (rassq cs mime-charset-coding-system-alist)
-		(memq cs dest)
-		(setq dest (cons cs dest))
-		)))
+	    (unless (memq cs dest)
+	      (setq dest (cons cs dest))
+	      )))
 	(setq rest (cdr rest)))
       dest)
     ))
