@@ -1,3 +1,10 @@
+2014-06-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mcs-e20.el (mime-charset-list): Fix the case that MIME charset
+	and coding system have n:1 relation.
+
+	* mcs-xm.el (mime-charset-list): Likewise.
+
 2014-06-03  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mcs-e20.el (coding-system-to-mime-charset): Check
